# beyless_vending_terminal

./: CMakeLists.txt  README.md  camera.cpp  camera.h  doorLock.cpp  doorLock.h  logger.cpp  logger.h  main.cpp  terminal.cpp  terminal.h
